docs/pages/versions/v43.0.0/index.mdx
---
title: API Reference
hideTOC: true
---

import VersionedRedirectNotification from '~/components/plugins/VersionedRedirectNotification';
import { Terminal } from '~/ui/components/Snippet';
import { BoxLink } from '~/ui/components/BoxLink';
import { InlineCode } from '~/components/base/code';

<VersionedRedirectNotification />

The Expo SDK provides access to device and system functionality such as contacts, camera, and GPS location. You install modules from the Expo SDK using `expo-cli` with the `expo install` command:

<Terminal cmd={['$ expo install expo-camera expo-contacts expo-sensors']} />

You can import modules from it in your JavaScript code as follows:

```javascript
import { Camera } from 'expo-camera';
import * as Contacts from 'expo-contacts';
import { Gyroscope } from 'expo-sensors';
```

This allows you to write [`Contacts.getContactsAsync()`](/versions/latest/sdk/contacts#contactsgetcontactsasynccontactquery) and read the contacts from the device, read the gyroscope sensor to detect device movement, or render a Camera view and take photos.

## These packages work in bare React Native apps too

The easiest way to create a bare React Native app with support for the Expo SDK is by running the command:

<Terminal
  cmd={['# Create a project named my-app', '$ npx create-expo-app my-app --template bare-minimum']}
  cmdCopy="npx create-expo-app my-app --template bare-minimum"
/>

<BoxLink
  title="Existing apps"
  href="/bare/installing-expo-modules"
  description={
    <>
      Projects that were created with <InlineCode>npx react-native init</InlineCode> require
      additional setup to use the Expo SDK.
    </>
  }
/>

<BoxLink
  title="Using libraries"
  description="Learn how to install Expo SDK packages in your project."
  href="/workflow/using-libraries"
/>

## Each Expo SDK version depends on a React Native version

Every quarter there is a new Expo SDK release that typically updates to the latest stable version of React Native and includes a variety of bugfixes, features and improvements to the Expo SDK. It's often useful to know what version of React Native your Expo project is running on, so the following table maps Expo SDK versions to their included React Native version.

| Expo SDK Version | React Native Version |
| ---------------- | :------------------: |
| 43.0.0           |        0.64.3        |
| 42.0.0           |        0.63.3        |
| 41.0.0           |        0.63.3        |
| 40.0.0           |        0.63.3        |
| 39.0.0           |        0.63.2        |
| 38.0.0           |        0.62.2        |
| 37.0.0           |        0.61.4        |
